Fix footer link spacing

--- a/app/assets/stylesheets/components/account/_account_footer.scss
+++ b/app/assets/stylesheets/components/account/_account_footer.scss
@@ -1,11 +1,19 @@
 .account-footer-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: black;
-    height: 200px;
+  background-color: black;
+  height: 537px;
+  padding: 80px 0 50px;
  }
 
  .account-footer-nav {
    color: white;
+   background-color: black;
+ }
+
+ .account-footer-nav-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 407px;
+  width: 1170px;
+  margin: 0 110px;
  }
