--- a/app/assets/stylesheets/components/session/_login_form.scss
+++ b/app/assets/stylesheets/components/session/_login_form.scss
@@ -101,7 +101,7 @@
   padding: 16px 14px 18px;
   border-radius: 25px;
   width: 450px;
-  font-size: 12px;
+  font-size: 16px;
   text-align: center;
   letter-spacing: .2em;
 }
